--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
 			  <section data-background='https://live.staticflickr.com/65535/51211180103_a4c373c1fd_k_d.jpg'><h1>Raku ^ 2016</h1>
 			    <h2 class='fragment'>Perl ^ 1994 </h2>
 			  <h3 class='fragment'> Programming ^ 1983 </h3>
-			  <h4 class='fragment'> Senior Software Engineer @ <a href='https://polypoly.om'>polypoly</a></h4>
+			  <h4 class='fragment'> Senior Software Engineer @ <a
+		                                                               href='https://polypoly.om'>polypoly</a></h4>
+                          </section>
+
+                          <section data-background="https://live.staticflickr.com/927/29528319578_fc904496b2_k_d.jpg"><h1>Yes, we have that too</h1>
+                              <h2 class="fragment">Raku, everything <em>and</em>
+                                  the kitchen sink</h2>
+                          </section>
+
+                          <section><h1>But what is aspect oriented programming?</h1></section>
 			</div>
 		</div>
 
