--- a/index.html
+++ b/index.html
@@ -33,7 +33,28 @@
                                   the kitchen sink</h2>
                           </section>
 
-                          <section><h1>But what is aspect oriented programming?</h1></section>
+                          <section>
+                              <h1>But what is aspect oriented programming?</h1>
+                          </section>
+
+                          <section><h1>A methodology to preserve single
+                              responsability</h1>
+                              <h2 class="fragment"><em>Cross-cutting</em>
+                                  concerns are turned into
+                                  <strong>aspects</strong></h2>
+                          </section>
+
+                          <section><h1>Authorization is a cross-cutting
+                              concern</h1>
+                              <h2>Is this caller authorized to make this
+                                  function call?</h2>
+                          </section>
+
+                          <section><h2><em>Traditional</em> programming:
+			      authorization <em>injection</em></h2>
+                              <h1 class="fragment">AOP: authorization
+			          <em>aspect</em>
+                              </h1>
 			</div>
 		</div>
 
