--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@ say "We're «{caller}»";
 sub bad-guy() { caller; }
 say "And now «{bad-guy}»";</code></pre>
                           </section>
+
+                          <section data-background="https://live.staticflickr.com/65535/51277082756_276f43ba40_k_d.jpg"><h2>Not an aspect yet</h2>
+                              <h1 class="fragment">But we're getting there</h1>
+                              <aside class="notes">Like this moon, it's beyond
+                                  the fence, but seems a bit closer now.</aside>
+                          </section>
                         </div>
 		</div>
 
