--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@ say "And now «{bad-guy}»";</code></pre>
                               <aside class="notes">Like this moon, it's beyond
                                   the fence, but seems a bit closer now.</aside>
                           </section>
+
+
+                          <section data-background="https://live.staticflickr.com/7849/40203659003_66360c68ae_k_d.jpg"><h1><em>Advices</em> get hooked to
+                              <em>point-cuts</em></h1>
+                              <h2 class="fragment">Phasers in rakulang</h2>
+                          </section>
                         </div>
 		</div>
 
