--- a/index.html
+++ b/index.html
@@ -110,11 +110,29 @@ say "And now «{bad-guy}»";</code></pre>
                                   the fence, but seems a bit closer now.</aside>
                           </section>
 
-
                           <section data-background="https://live.staticflickr.com/7849/40203659003_66360c68ae_k_d.jpg"><h1><em>Advices</em> get hooked to
                               <em>point-cuts</em></h1>
-                              <h2 class="fragment">Phasers in rakulang</h2>
+                              <h2 class="fragment"><em>Cross-cutting</em>
+                                  program points: function names, enter, exit.</h2>
                           </section>
+
+                          <section><h1>Smells like phasers</h1>
+                              <pre><code>sub doing-good() {
+    ENTER {
+        if Backtrace.new.grep: { .subname  ~~ /bad/ } {
+            fail("Not authorized to call this");
+        }
+    }
+    return "good"
+} ;</code></pre>
+                              <aside class="notes">This is <em>not really</em> a
+                              pointcut, since we're "cutting" only a single
+                              function, not even a whole class of
+                                  functions. Same as before, really</aside>
+                          </section>
+
+                          
+                          
                         </div>
 		</div>
 
