--- a/index.html
+++ b/index.html
@@ -1,64 +1,72 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Aspect Oriented Programming in Raku</title>
+    <title>Aspect Oriented Programming in Raku</title>
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/extra.css">
-		<link rel="stylesheet" href="dist/aop-raku.css">
+    <link rel="stylesheet" href="dist/reset.css">
+    <link rel="stylesheet" href="dist/reveal.css">
+    <link rel="stylesheet" href="dist/extra.css">
+    <link rel="stylesheet" href="dist/aop-raku.css">
 
-		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-			  <section data-background='https://live.staticflickr.com/65535/51288927173_297bc02787_k_d.jpg'>
-			    <h1>Aspect Oriented Programming in Raku</h1>
-			    <h2><a href='https://github.com/JJ'><code>JJ</code>@GitHub</a>, <a href='https://twitter.com/jjmerelo'><code>@jjmerelo</code></a></h2>
-			  </section>
-			  <section data-background='https://live.staticflickr.com/65535/51211180103_a4c373c1fd_k_d.jpg'><h1>Raku ^ 2016</h1>
-			    <h2 class='fragment'>Perl ^ 1994 </h2>
-			  <h3 class='fragment'> Programming ^ 1983 </h3>
-			  <h4 class='fragment'> Senior Software Engineer @ <a
-		                                                               href='https://polypoly.om'>polypoly</a></h4>
-                          </section>
+    <!-- Theme used for syntax highlighted code -->
+    <link rel="stylesheet" href="plugin/highlight/monokai.css">
+</head>
+<body>
+<div class="reveal">
+    <div class="slides">
+        <section
+                data-background='https://live.staticflickr.com/65535/51288927173_297bc02787_k_d.jpg'>
+            <h1>Aspect Oriented Programming in Raku</h1>
+            <h2><a href='https://github.com/JJ'><code>JJ</code>@GitHub</a>, <a
+                    href='https://twitter.com/jjmerelo'><code>@jjmerelo</code></a>
+            </h2>
+        </section>
+        <section
+                data-background='https://live.staticflickr.com/65535/51211180103_a4c373c1fd_k_d.jpg'>
+            <h1>Raku ^ 2016</h1>
+            <h2 class='fragment'>Perl ^ 1994 </h2>
+            <h3 class='fragment'> Programming ^ 1983 </h3>
+            <h4 class='fragment'> Senior Software Engineer @<a
+                    href='https://polypoly.om'>polypoly</a></h4>
+        </section>
 
-                          <section data-background="https://live.staticflickr.com/927/29528319578_fc904496b2_k_d.jpg"><h1>Yes, we have that too</h1>
-                              <h2 class="fragment">Raku, everything <em>and</em>
-                                  the kitchen sink</h2>
-                          </section>
+        <section
+                data-background="https://live.staticflickr.com/927/29528319578_fc904496b2_k_d.jpg">
+            <h1>Yes, we have that too</h1>
+            <h2 class="fragment">Raku, everything <em>and</em>
+                the kitchen sink</h2>
+        </section>
 
-                          <section>
-                              <h1>But what is aspect oriented programming?</h1>
-                          </section>
+        <section>
+            <h1>But what is aspect oriented programming?</h1>
+        </section>
 
-                          <section><h1>A methodology to preserve single
-                              responsability</h1>
-                              <h2 class="fragment"><em>Cross-cutting</em>
-                                  concerns are turned into
-                                  <strong>aspects</strong></h2>
-                          </section>
+        <section><h1>A methodology to preserve single
+            responsability</h1>
+            <h2 class="fragment"><em>Cross-cutting</em>
+                concerns are turned into
+                <strong>aspects</strong></h2>
+        </section>
 
-                          <section><h1>Authorization is a cross-cutting
-                              concern</h1>
-                              <h2>Is this caller authorized to make this
-                                  function call?</h2>
-                          </section>
+        <section><h1>Authorization is a cross-cutting
+            concern</h1>
+            <h2>Is this caller authorized to make this
+                function call?</h2>
+        </section>
 
-                          <section><h2><em>Traditional</em> programming:
-			      authorization <em>injection</em></h2>
-                              <h1 class="fragment">AOP: authorization
-			          <em>aspect</em>
-                              </h1>
-                          </section>
+        <section><h2><em>Traditional</em> programming:
+            authorization <em>injection</em></h2>
+            <h1 class="fragment">AOP: authorization
+                <em>aspect</em>
+            </h1>
+        </section>
 
-                          <section><h1>Introducing sub wraps</h1>
-                              <pre><code data-line-numbers="1-2|4-9|11-12|14-15">sub doing-good() { return "good" };
+        <section><h1>Introducing sub wraps</h1>
+            <pre><code data-line-numbers="1-2|4-9|11-12|14-15">sub doing-good() { return "good" };
 say doing-good();
 
 &doing-good.wrap( sub {
@@ -73,21 +81,23 @@ say caller;
 
 sub outer() { caller; }
 say outer();</code></pre>
-                          </section>
+        </section>
 
-                          <section><h1>Or the whole trace</h1>
-                              <pre><code>&doing-good.wrap( sub {
+        <section><h1>Or the whole trace</h1>
+            <pre><code>&doing-good.wrap( sub {
     my $bt = Backtrace.new;
     my @subnames = $bt.grep: { .subname ~~ /^\w/ };
     return  "Called from 🔈{@subnames.map( *.subname ).join(" ⇒ ")}🔈 →" ~
             callsame;
-});</code></pre><code><pre>Called from 🔈new ⇒ enter_with_args ⇒ enter ⇒ CALL-ME🔈 →good
+});</code></pre>
+            <code><pre>Called from 🔈new ⇒ enter_with_args ⇒ enter ⇒ CALL-ME🔈 →good
 Called from 🔈new ⇒ enter_with_args ⇒ enter ⇒ CALL-ME ⇒ caller🔈 →good
-Called from 🔈new ⇒ enter_with_args ⇒ enter ⇒ CALL-ME ⇒ caller ⇒ outer🔈 →good</pre></code></section>
+Called from 🔈new ⇒ enter_with_args ⇒ enter ⇒ CALL-ME ⇒ caller ⇒ outer🔈 →good</pre>
+            </code></section>
 
-                          <section>
-                              <h1>Let's aspect it</h1>
-                              <pre><code data-line-numbers="1-9|4,6-12|4-6,14-15">sub doing-good() {  return "good"} ;
+        <section>
+            <h1>Let's aspect it</h1>
+            <pre><code data-line-numbers="1-9|4,6-12|4-6,14-15">sub doing-good() {  return "good"} ;
 
 &doing-good.wrap( sub {
     if Backtrace.new.grep: { .subname  ~~ /bad/ } {
@@ -102,22 +112,27 @@ say "We're «{caller}»";
 
 sub bad-guy() { caller; }
 say "And now «{bad-guy}»";</code></pre>
-                          </section>
+        </section>
 
-                          <section data-background="https://live.staticflickr.com/65535/51277082756_276f43ba40_k_d.jpg"><h2>Not an aspect yet</h2>
-                              <h1 class="fragment">But we're getting there</h1>
-                              <aside class="notes">Like this moon, it's beyond
-                                  the fence, but seems a bit closer now.</aside>
-                          </section>
+        <section
+                data-background="https://live.staticflickr.com/65535/51277082756_276f43ba40_k_d.jpg">
+            <h2>Not an aspect yet</h2>
+            <h1 class="fragment">But we're getting there</h1>
+            <aside class="notes">Like this moon, it's beyond
+                the fence, but seems a bit closer now.
+            </aside>
+        </section>
 
-                          <section data-background="https://live.staticflickr.com/7849/40203659003_66360c68ae_k_d.jpg"><h1><em>Advices</em> get hooked to
-                              <em>point-cuts</em></h1>
-                              <h2 class="fragment"><em>Cross-cutting</em>
-                                  program points: function names, enter, exit.</h2>
-                          </section>
+        <section
+                data-background="https://live.staticflickr.com/7849/40203659003_66360c68ae_k_d.jpg">
+            <h1><em>Advices</em> get hooked to
+                <em>point-cuts</em></h1>
+            <h2 class="fragment"><em>Cross-cutting</em>
+                program points: function names, enter, exit.</h2>
+        </section>
 
-                          <section><h1>Smells like phasers</h1>
-                              <pre><code>sub doing-good() {
+        <section><h1>Smells like phasers</h1>
+            <pre><code>sub doing-good() {
     ENTER {
         if Backtrace.new.grep: { .subname  ~~ /bad/ } {
             fail("Not authorized to call this");
@@ -125,20 +140,41 @@ say "And now «{bad-guy}»";</code></pre>
     }
     return "good"
 } ;</code></pre>
-                              <aside class="notes">This is <em>not really</em> a
-                              pointcut, since we're "cutting" only a single
-                              function, not even a whole class of
-                                  functions. Same as before, really</aside>
-                          </section>
+            <aside class="notes">This is <em>not really</em> a
+                pointcut, since we're "cutting" only a single
+                function, not even a whole class of
+                functions. Same as before, really
+            </aside>
+        </section>
 
-                        </div>
-		</div>
+        <section><h1>Traits will do</h1>
+            <pre><code data-line-numbers="1-3|1-3,7|7,9">sub show-value( $a-var ) {
+    say "Value of {$a-var.^name} is ", $a-var.gist;
+}
 
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
-		<script>
+sub do-stuff () {
+    ENTER { say "Going in"; }
+    our $bar will leave { show-value($_) };
+    $bar = "baz";
+    LEAVE { say "Leaving"; }
+}
+do-stuff();</code></pre>
+<aside class="notes">Not exactly a point-cut, not exactly an advice,
+    although the concept is similar (not cross-cutting) but the concept
+    is similar: a point in the lifecycle of something, a block in this
+    case, and some piece of code, which has some payload, like the
+    "advice" in an aspect. Still not there, but we're relating Raku
+    concepts to their AOP equivalent.</aside>
+        </section>
+
+    </div>
+</div>
+
+<script src="dist/reveal.js"></script>
+<script src="plugin/notes/notes.js"></script>
+<script src="plugin/markdown/markdown.js"></script>
+<script src="plugin/highlight/highlight.js"></script>
+<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
@@ -150,6 +186,7 @@ say "And now «{bad-guy}»";</code></pre>
 				// Learn about plugins: https://revealjs.com/plugins/
 			    plugins: [ RevealHighlight, RevealNotes ]
 			});
-		</script>
-	</body>
+
+</script>
+</body>
 </html>
