--- a/index.html
+++ b/index.html
@@ -226,6 +226,71 @@ say %SUB-COUNTS; # ⇒ {we're-also-counted => 10, we're-counted => 20}</code></p
             single function, because if we apply two different point
             cuts to a single routine, multiple schedule will fail.</aside>
         </section>
+
+        <section><h1>Jonathan's high magic: Advices</h1>
+        <pre><code data-line-numbers="9-16">my class MethodBoundaryAspect is export {}
+
+multi trait_mod:&lt;is>(Mu:U $type, MethodBoundaryAspect:U $aspect) is export {
+    $aspect === MethodBoundaryAspect ??
+    $type.HOW.add_parent($type, $aspect) !!
+            $type.HOW.add_aspect($type, $aspect);
+}
+
+class LoggingAspect is MethodBoundaryAspect {
+    method entry($method, $obj, $args) {
+        say "Called $method with $args";
+    }
+    method exit($method, $obj, $args, $result) {
+        say "$method returned with $result.raku()";
+    }
+}  </code></pre>
+        </section>
+        <section><h1>Jonathan's magic aspects: point-cuts</h1>
+            <pre><code data-line-numbers="8|10-12">my class ClassWithAspectsHOW is Metamodel::ClassHOW {
+    has @!aspects;
+    method add_aspect(Mu $obj, MethodBoundaryAspect:U $aspect) {
+        @!aspects.push($aspect);
+    }
+    method compose(Mu $obj) {
+        for @!aspects -> $a {
+            for self.methods($obj, :local) -> $m {
+                $m.wrap(-> $obj, |args {
+                    $a.?entry($m.name, $obj, args);
+                    my $result := callsame;
+                    $a.?exit($m.name, $obj, args, $result);
+                    $result
+                });
+            }
+        }
+        callsame;
+    }
+}</code></pre>
+    <aside class="notes">This is really a collection of Raku's high
+        magic. It defines a HOW, higher order working, which defines a
+        new type, with its own higher-order working. You can add_aspects
+    to an aspect, using the is trait, and with MethodBoundaryAspect
+        (which uses method entry and exit as point-cuts). You can make
+        this a multi, and then add any kind of aspect (although we would
+    have to adapt the compose code to accomodate them. An EntryAspect
+        would define only entry, a exit aspect only exit, for instance.</aside>
+        </section>
+        <section><h1>Jonathan's magic: the real aspect</h1>
+            <pre><code data-line-numbers="1">aspected Example is LoggingAspect {
+    method double($x) { $x * 2 }
+    method square($x) { $x ** 2 }
+}
+say Example.double(3); # Called double with 3\double returned with 6\6
+say Example.square(3); # ditto</code></pre>
+    <aside class="notes">
+        All magic is under the hood: we just have to call this aspected and
+        it will become, through the loggingAspect have all that's needed to
+        create point-cuts in its methods, and add advice contained in
+        LoggingAspect.
+    </aside>
+
+        </section>
+
+        </section>
     </div>
 </div>
 
