Less discriminate mode

--- a/index.html
+++ b/index.html
@@ -289,7 +289,15 @@ say Example.square(3); # ditto</code></pre>
     </aside>
 
         </section>
+        <section><h1>Aspect oriented programming:</h1>
+            <h1 class="fragment">Yes we can!</h1>
+        </section>
 
+        <section><h1>Using</h1>
+            <h2 class="fragment">Decorators</h2>
+            <h2 class="fragment">Traits</h2>
+            <h2 class="fragment">Multiple scheduling</h2>
+            <h2 class="fragment">Metaprogramming</h2>
         </section>
     </div>
 </div>
