--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ say Example.square(3); # ditto</code></pre>
             <h2 class="fragment">Metaprogramming</h2>
         </section>
 
-	<section><h1>Thank you</h1></section>
+	<section data-background="https://live.staticflickr.com/65535/51330754451_d732b8d137_k_d.jpg"><h1>Thank you</h1></section>
     </div>
 </div>
 
