Update no comments

--- a/index.html
+++ b/index.html
@@ -317,8 +317,7 @@ say Example.square(3); # ditto</code></pre>
 			    width: '95%',
 			    controls: true,
 			    progress: true,
-				// Learn about plugins: https://revealjs.com/plugins/
-			    plugins: [ RevealHighlight, RevealNotes ]
+			    plugins: [ RevealHighlight, RevealNote ]
 			});
 
 </script>
